--- a/Gittest/en.lproj/MainStoryboard.storyboard
+++ b/Gittest/en.lproj/MainStoryboard.storyboard
@@ -38,10 +38,10 @@
             </objects>
             <point key="canvasLocation" x="714" y="115"/>
         </scene>
-        <!--View Controller-->
+        <!--Gittest Label View Controller-->
         <scene sceneID="UdL-sS-GTq">
             <objects>
-                <viewController id="zaS-pp-i3Z" sceneMemberID="viewController">
+                <viewController id="zaS-pp-i3Z" customClass="GittestLabelViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5NS-Ua-g2f">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -87,6 +87,9 @@
         </scene>
     </scenes>
     <classes>
+        <class className="GittestLabelViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GittestLabelViewController.h"/>
+        </class>
         <class className="GittestViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GittestViewController.h"/>
         </class>
