--- a/Gittest/en.lproj/MainStoryboard.storyboard
+++ b/Gittest/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3006" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vnz-rZ-qzt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vnz-rZ-qzt">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -25,9 +25,21 @@
                                     <segue destination="zaS-pp-i3Z" kind="push" id="hK9-iK-kBP"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sGW-CC-x7u">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Testing">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="sGW-CC-x7u" firstAttribute="centerX" secondItem="caA-xf-dlK" secondAttribute="centerX" type="default" id="3cb-5Z-Xgc"/>
+                            <constraint firstItem="sGW-CC-x7u" firstAttribute="top" secondItem="3" secondAttribute="top" constant="245" id="UVL-Hi-Hnj"/>
                             <constraint firstItem="caA-xf-dlK" firstAttribute="top" secondItem="3" secondAttribute="top" constant="158" id="VOA-rE-jlH"/>
                             <constraint firstItem="caA-xf-dlK" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="112" id="Vfb-Cu-kkA"/>
                         </constraints>
@@ -54,11 +66,18 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label Test" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVk-i8-6js">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="IPO-t0-DZo" firstAttribute="leading" secondItem="5NS-Ua-g2f" secondAttribute="leading" constant="116" id="7Ml-4k-pUL"/>
                             <constraint firstItem="IPO-t0-DZo" firstAttribute="top" secondItem="5NS-Ua-g2f" secondAttribute="top" constant="199" id="XmX-mS-Yi0"/>
+                            <constraint firstAttribute="bottom" secondItem="bVk-i8-6js" secondAttribute="bottom" constant="179" id="pOC-5E-kyZ"/>
+                            <constraint firstItem="bVk-i8-6js" firstAttribute="centerX" secondItem="5NS-Ua-g2f" secondAttribute="centerX" type="default" id="yMP-3U-azZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ymt-Gw-1WF"/>
