--- a/Gittest/en.lproj/MainStoryboard.storyboard
+++ b/Gittest/en.lproj/MainStoryboard.storyboard
@@ -34,6 +34,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="aBU-bD-c5f" kind="push" id="J7g-Xm-h8J"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fiT-AU-6ha">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -60,7 +63,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="714" y="115"/>
+            <point key="canvasLocation" x="724" y="229"/>
         </scene>
         <!--Gittest Label View Controller-->
         <scene sceneID="UdL-sS-GTq">
@@ -96,7 +99,33 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PGD-i7-rrJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1170" y="115"/>
+            <point key="canvasLocation" x="1214" y="-96"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="vMo-sf-S0B">
+            <objects>
+                <viewController id="aBU-bD-c5f" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wQn-pf-M35">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="View controller 2" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VTz-la-ipj">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VTz-la-ipj" firstAttribute="top" secondItem="wQn-pf-M35" secondAttribute="top" constant="174" id="mf9-7r-ftA"/>
+                            <constraint firstItem="VTz-la-ipj" firstAttribute="centerX" secondItem="wQn-pf-M35" secondAttribute="centerX" type="default" id="nYf-UW-w8I"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="HSh-Q1-oDO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LKQ-5C-Aeq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1214" y="569"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wc0-4G-lys">
@@ -114,7 +143,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ezb-sd-cMa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="333" y="115"/>
+            <point key="canvasLocation" x="289" y="223"/>
         </scene>
     </scenes>
     <classes>
